assets/css/style.css
body {
    background-image: url("../images/back.png");
    font-family: Josefin+Sans;
}
nav {
    padding-top: 15px;
    padding-bottom: 15px;
    color: #777777;
}
section {
    font-family: josefin+Sans;
    font-size: 25px;
    color: #777777;
}
footer {
    padding-top: 15px;
}
h1 {
    font-size: 35px;
}
.banner {
    position: fixed;
    width: 100%;
    border-bottom: solid #dddddd 3px;
    background-color: #ffffff;
    padding-bottom: 15px;
    margin-bottom: 0;
}
.links {
    float: right;
    list-style-type: none;
    margin-right: 22%;
    padding: 30px;
    padding-top: 45px;
}
li {
    display: inline;
    font-size: 18px;
    border-right: solid #777777 1px;
}
li:nth-last-child(1) {
    border-right: none;
}
.logo {
    position: fixed;
    top: 0;
    float: left;
    margin-left: 23%;
    margin-top: 0px;
    margin-bottom: 0;
    padding: 31.5px;
    font-family: 'Georgia', Times, Times New Roman, serif;
    color: #ffffff;
    font-size: 45px;
    background-color: #175e80;
}
/* About/*/
.about {
    clear: both;
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 45px;
    color: #175e80;
}
.paragraph {
    border: solid #7e7d7d 1px;
    background-color: #ffffff;
    width: 50%;
    margin: auto;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    font-size: 28px;
    color: #777777;
    padding: 35px;
    line-height: 1.6;
}
.profile {
    float: left;
    height: 400px;
    border: solid 3px #363636e8;
    border-radius: 50%;
    margin-right: 30px;
}

/* Contact /*/
.contact {
    clear: both;
    font-family: 'Georgia', Times, Times New Roman, serif;
    color: #777777;
    font-size: 25px;
}
.message {
    width: 100%;
    border: solid #777777 2px;
    border-radius: 4px;
    height: 200px;
    resize: none;
}
.boxes {
    width: 100%;
    height: 35px;
    border: solid #777777 2px;
    border-radius: 4px;
    color: rgba(194, 192, 192, 0.609);
}
input[type="name"] {
    width: 100%;
    height: 35px;
    border: solid #777777 2px;
    border-radius: 2px;
    color: rgba(194, 192, 192, 0.609);
}
input[type="submit"] {
    background-color:#175e80;
    border: solid 2px #363636e8;
    border-radius: 4px;
    color: #777777;
    padding: 16px 32px;
    text-decoration: none;
    font-size: 20px;
    margin: 4px 2px;
    cursor: pointer;
}
input[type="reset"] {
    background-color: #175e80;
    border: solid 1px #363636e8;
    border-radius: 4px;
    color: #777777;
    padding: 16px 32px;
    text-decoration: none;
    font-size: 20px;
    margin: 4px 2px;
    cursor: pointer;
}
.submit:hover {
    color: #ffffff;
}

/* Portfolio/*/

.grid-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: flex-start;
    align-content: flex-start;
    height: 700px;
}
.grid-container > div {
    padding: 0px 35px 25px 0px;
    height: 200px;
    width: 300px;
}

.images {
    text-align: center;
    color: #777777;
}
.images img {
    height: 200px;
    width: 300px
}
.images:hover {
    opacity: .6;
    color: black;
}

.text-box {
    font-size: 20px;
    background-color: #175e80;
    padding-top: 20px;
    padding-bottom: 20px;
    bottom: 100px;
    left: 250px;
    transform: translate(-0px, -95px);
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}


/* footer/*/
.footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 5%;
    background-color: #363636e8;
    border-top: solid 10px #175e80;
    margin-top: 25px;
    text-align: center;
    padding-bottom: 0;
}
.copyright {
    padding-top: 40px;
    font-family: ariel;
    font-size: 14px;
    color: #777777;
}

